--- a/app/style/style.css
+++ b/app/style/style.css
@@ -64,16 +64,16 @@ body {
 
 .new-generation {
   padding: 117px 230px; }
-  .new-generation .info {
+  .new-generation__info {
     max-width: 1080px;
     margin: 0 auto; }
-    .new-generation .info__logo {
-      width: 52px; }
-    .new-generation .info__title {
-      letter-spacing: 1.7px;
-      margin: 23px 0; }
-    .new-generation .info__text {
-      font-size: 17px; }
+  .new-generation__logo {
+    width: 52px; }
+  .new-generation__title {
+    letter-spacing: 1.7px;
+    margin: 23px 0; }
+  .new-generation__text {
+    font-size: 17px; }
 
 .generation-info__items {
   display: flex; }
@@ -88,37 +88,37 @@ body {
     display: flex;
     flex-direction: column;
     width: 33.1%; }
-    .generation-info__items .generation-info__item .info {
-      padding: 64px 65px 60px 61px;
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      align-items: center; }
-      .generation-info__items .generation-info__item .info__title {
-        margin: 23px 0 11px 0; }
-      .generation-info__items .generation-info__item .info__text {
-        text-align: justify;
-        font-size: 16px;
-        line-height: 30px; }
-        .generation-info__items .generation-info__item .info__text:after {
-          content: '';
-          width: 50px;
-          height: 3px;
-          background-color: #d7d7d7;
-          display: block;
-          margin: 40px auto 0; }
-      .generation-info__items .generation-info__item .info:after {
+  .generation-info__items .generation-info__item-info {
+    padding: 64px 65px 60px 61px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .generation-info__items .generation-info__item-info .generation-info__item-title {
+      margin: 23px 0 11px 0; }
+    .generation-info__items .generation-info__item-info .generation-info__item-text {
+      text-align: justify;
+      font-size: 16px;
+      line-height: 30px; }
+      .generation-info__items .generation-info__item-info .generation-info__item-text:after {
         content: '';
-        position: absolute;
-        left: auto;
-        bottom: -39px;
-        border: 20px solid transparent;
-        border-top: 20px solid white; }
+        width: 50px;
+        height: 3px;
+        background-color: #d7d7d7;
+        display: block;
+        margin: 40px auto 0; }
+    .generation-info__items .generation-info__item-info:after {
+      content: '';
+      position: absolute;
+      left: auto;
+      bottom: -39px;
+      border: 20px solid transparent;
+      border-top: 20px solid white; }
   .generation-info__items:last-child .image-container {
     width: 33.5%; }
   .generation-info__items:last-child .generation-info__item {
     width: 33.5%; }
-  .generation-info__items:last-child .info__logo {
+  .generation-info__items:last-child .generation-info__item-logo {
     width: 23px; }
   .generation-info__items:last-child .image-container:last-child {
     background-image: url("../images/Layer14.png"); }
@@ -139,7 +139,7 @@ body {
   background-image: url("../images/Layer11.png");
   width: 100%; }
 
-.generation-info__items:first-child .generation-info__item .info__logo {
+.generation-info__items:first-child .generation-info__item .generation-info__item-logo {
   width: 41px; }
 
 .generation-info__items:nth-child(2) .image-container {
@@ -147,7 +147,7 @@ body {
   .generation-info__items:nth-child(2) .image-container__logo {
     width: 177px; }
 
-.generation-info__items:nth-child(2) .generation-info__item .info__logo {
+.generation-info__items:nth-child(2) .generation-info__item .generation-info__item-logo {
   width: 32px; }
 
 .generation-info__items:nth-child(2) .generation-info__item .image-container {
@@ -159,7 +159,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column; }
-  .contact .info__logo {
+  .contact .contact-logo {
     width: 32px; }
   .contact .slick-list {
     margin-bottom: 85px; }
@@ -173,25 +173,25 @@ body {
     border: 1px solid #a9afb3; }
   .contact .carousel-indicators .active {
     background-color: #a9afb3; }
-  .contact .info {
+  .contact .contact-info {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0 auto; }
-    .contact .info__title {
-      max-width: 1040px;
-      margin: 33px 0 11px 0;
-      text-transform: none;
-      font-size: 18px;
-      letter-spacing: 2px; }
-      .contact .info__title__time {
-        display: inline;
-        color: #848789; }
-    .contact .info__text {
-      max-width: 1040px;
-      font-size: 24px;
-      line-height: 34px;
-      font-style: italic; }
+  .contact .contact-title {
+    max-width: 1040px;
+    margin: 33px 0 11px 0;
+    text-transform: none;
+    font-size: 18px;
+    letter-spacing: 2px; }
+  .contact .contact-time {
+    display: inline;
+    color: #848789; }
+  .contact .contact-text {
+    max-width: 1040px;
+    font-size: 24px;
+    line-height: 34px;
+    font-style: italic; }
   .contact .slick-dots {
     bottom: 65px;
     left: 0; }
@@ -376,9 +376,9 @@ body {
       width: 100%; }
     .generation-info__items:last-child .generation-info__item {
       align-items: center; }
-      .generation-info__items:last-child .generation-info__item .info {
+      .generation-info__items:last-child .generation-info__item .generation-info__item {
         padding: 100px 40px 54px 40px; }
-        .generation-info__items:last-child .generation-info__item .info:after {
+        .generation-info__items:last-child .generation-info__item .generation-info__item:after {
           content: '';
           position: absolute;
           left: 47%;
@@ -509,14 +509,11 @@ body {
   .generation-info__items {
     flex-direction: column; }
     .generation-info__items .image-container {
-      /*  background-position: center;
-          background-size: cover;
-          background-repeat: no-repeat;*/
       background: no-repeat center / cover;
       padding: 40px 0; }
     .generation-info__items .image-container, .generation-info__items__item {
       width: 100%; }
-    .generation-info__items .generation-info__item .info__text {
+    .generation-info__items .generation-info__item .generation-info__item-text {
       padding: 0 0 45px 0; }
   .generation-info__items:last-child {
     flex-direction: column; }
@@ -551,7 +548,7 @@ body {
     padding: 80px 0; }
   .contact {
     padding: 10px 10px; }
-    .contact .info {
+    .contact .contact-info {
       padding: 127px 10px; }
   .contact-with-us__container__input {
     width: 260px; }
@@ -563,7 +560,7 @@ body {
     right: -27px; }
   .new-generation {
     padding: 117px 20px; }
-    .new-generation .info__text {
+    .new-generation__text {
       text-align: justify; }
   .generation-info__items .generation-info__item .info {
     padding: 50px 25px; }
