--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&subset=latin-ext');
 
 $Lato: 'Lato', sans-serif;
-$MainText: #848789;
+$MainColor: #848789;
 html, body {
   margin: 0;
   padding: 0;
@@ -10,6 +10,7 @@ html, body {
 body {
   font-family: $Lato;
   font-size: 16px;
+
 }
 
 .slick-dots {
@@ -66,17 +67,21 @@ body {
 
 .info {
   text-align: center;
-  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   &__title {
     letter-spacing: 4px;
     text-transform: uppercase;
     color: #353738;
-    font-size: 20px;
+    font-weight: bold;
+    font-size: 18px;
   }
   &__text {
-    color: $MainText;
+    color: $MainColor;
     line-height: 34px;
     margin: 0;
+    font-size: 16px;
   }
 }
 
@@ -92,9 +97,6 @@ body {
   &__title {
     letter-spacing: 1.7px;
     margin: 23px 0;
-  }
-  &__text {
-    font-size: 17px;
   }
 
 }
@@ -120,15 +122,12 @@ body {
     .generation-info__item-info {
       padding: 64px 65px 60px 61px;
       position: relative;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+
       .generation-info__item-title {
         margin: 23px 0 11px 0;
       }
       .generation-info__item-text {
         text-align: justify;
-        font-size: 16px;
         line-height: 30px;
         &:after {
           content: '';
@@ -242,21 +241,17 @@ body {
     background-color: #a9afb3;
   }
   .contact-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin: 0 auto;
   }
   .contact-title {
     max-width: 1040px;
     margin: 33px 0 11px 0;
     text-transform: none;
-    font-size: 18px;
     letter-spacing: 2px;
   }
   .contact-time {
     display: inline;
-    color: $MainText;
+    color: $MainColor;
   }
   .contact-text {
     max-width: 1040px;
@@ -396,7 +391,7 @@ body {
 
 .contact-with-us {
   font-size: 24px;
-  color: $MainText;
+  color: $MainColor;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -445,27 +440,32 @@ body {
   justify-content: space-around;
   align-items: center;
   padding: 84px 88px;
-  .generation-info__item {
+  &__item {
     font-size: 16px;
     line-height: 18px;
-    color: $MainText;
-    .address {
-      &__company {
-        font-weight: bold;
-      }
+    margin-bottom: 10px;
+    color: $MainColor;
+    &:last-child {
+      margin: 0;
     }
   }
   .address {
+    &__company {
+      font-weight: bold;
+    }
     &__link {
       display: block;
       text-decoration: none;
-      color: $MainText;
+      color: $MainColor;
     }
   }
   .social-icons {
     display: flex;
     &__link {
       margin-right: 15px;
+      &__image {
+        width: 35px;
+      }
       &__image:hover {
         opacity: .5;
         transition: opacity 400ms ease;
@@ -482,7 +482,7 @@ body {
     font-size: 14px;
     line-height: 18px;
     &__by {
-      color: $MainText;
+      color: $MainColor;
       margin-right: 10px;
       min-width: 110px;
     }
@@ -491,16 +491,10 @@ body {
       &__image {
         width: 55px;
       }
-    }
-
-  }
-}
-
-.footer {
-  .generation-info__item {
-    margin-bottom: 10px;
-    &:last-child {
-      margin: 0;
+      &:hover {
+        opacity: .5;
+        transition: opacity .5s ease;
+      }
     }
   }
 
@@ -526,6 +520,7 @@ body {
           width: 100%;
         }
         .generation-info__item {
+          width: 100%;
           align-items: center;
           .generation-info__item {
             padding: 100px 40px 54px 40px;
@@ -560,9 +555,6 @@ body {
     flex-direction: column;
     text-align: center;
     background-color: #fff;
-    &__link {
-      text-align: center;
-    }
   }
   .hamburg-menu {
     position: fixed;
@@ -570,7 +562,7 @@ body {
     right: -15px;
     transform: translate(-50%, -50%);
     width: 50px;
-    // height: 23px;
+    height: 23px;
     cursor: pointer;
     z-index: 3;
     &__burger-nav {
@@ -581,7 +573,7 @@ body {
       left: 50%;
       transform: translate(-50%, -50%);
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-      transition: .5s;
+      transition: transform .5s;
       background: #64c29e;
       border: none;
     }
@@ -594,7 +586,7 @@ body {
     position: absolute;
     top: 16px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    transition: .5s;
+    transition: all .5s;
     border: none;
     background-color: #64c29e;
   }
@@ -607,7 +599,7 @@ body {
   .hamburg-menu.active .hamburg-menu__burger-nav {
     background-color: rgba(0, 0, 0, 0);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
-    transition: 1s ease;
+    transition: background 1s ease;
 
   }
 
@@ -666,9 +658,6 @@ body {
   }
   .menu.open .menu__link {
     margin: 20px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
   }
 
   .contact-with-us {
@@ -716,7 +705,7 @@ body {
         background: no-repeat center / cover;
         padding: 40px 0;
       }
-      .image-container, &__item {
+      .image-container, .generation-info__item {
         width: 100%;
       }
       .generation-info__item {
@@ -809,7 +798,7 @@ body {
   .generation-info {
     &__items {
       .generation-info__item {
-        .info {
+        .generation-info__item-info {
           padding: 50px 25px;
         }
       }
@@ -825,7 +814,7 @@ body {
   .contact-with-us {
     padding: 60px 0;
   }
-  .contact .info {
+  .contact .contact-info {
     padding: 50px 10px;
   }
 
