--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -283,43 +283,52 @@ body {
     .item {
       display: flex;
     }
+    /*  .item--hover {
+        height: 267px;
+        width: 100%;
+        display: flex;
+        background: no-repeat center / cover;*/
     .item--hover {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      flex-grow: 1;
+      text-decoration: none;
+      text-transform: uppercase;
+      color: #fff;
+      font-size: 18px;
+      font-weight: bold;
+      // background-color: rgba(100, 194, 158, 0.8);
       height: 267px;
       width: 100%;
-      display: flex;
-      background: no-repeat center / cover;
-      &__link {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        flex-grow: 1;
-        text-decoration: none;
-        text-transform: uppercase;
-        color: #fff;
-        font-size: 18px;
-        font-weight: bold;
-        opacity: 0;
+      background: rgba(100, 194, 158, 0.8) no-repeat center / cover;
+      opacity: 0;
+      //&__img{
+      //  display: none;
+      //}
+      &:hover {
         background-color: rgba(100, 194, 158, 0.8);
-        &:hover {
-          opacity: 1;
-          cursor: pointer;
-          transition: opacity 400ms ease;
-        }
-        &:after {
-          position: absolute;
-          content: '';
-          left: 0;
-          top: 0;
-          right: 0;
-          bottom: 0;
-          opacity: 0;
-          z-index: -1;
-        }
+        opacity: 1;
+        cursor: pointer;
+        transition: opacity 400ms ease;
+        //.item--hover__img{
+        //  display: block;
+        //}
       }
-
+      &:after {
+        position: absolute;
+        content: '';
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        opacity: 0;
+        z-index: -1;
+      }
     }
+
   }
   .gallery__items:first-child {
     .item:first-child {
@@ -337,15 +346,18 @@ body {
     }
   }
   .gallery__items:nth-child(2) {
+    display: flex;
     .item:first-child {
-      .item--hover:first-child {
-        background-image: url('../images/Layer22.png');
-        height: 534px;
-      }
-      .item--hover:nth-child(2) {
-        background-image: url('../images/Layer25.png');
-        height: 534px;
-      }
+      width: 50%;
+      background-image: url('../images/Layer22.png');
+      height: 534px;
+
+    }
+    .item:last-child {
+      width: 50%;
+      background-image: url('../images/Layer25.png');
+      height: 534px;
+
     }
   }
   .gallery__items:last-child {
@@ -562,7 +574,7 @@ body {
     right: -15px;
     transform: translate(-50%, -50%);
     width: 50px;
-    height: 23px;
+    height: 40px;
     cursor: pointer;
     z-index: 3;
     &__burger-nav {
@@ -584,7 +596,7 @@ body {
     width: 50px;
     height: 6px;
     position: absolute;
-    top: 16px;
+    top: 24px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: all .5s;
     border: none;
@@ -592,7 +604,7 @@ body {
   }
 
   .hamburg-menu__burger-nav:before {
-    top: 0;
+    top: 8px;
     background-color: #64c29e;
   }
 
@@ -604,12 +616,12 @@ body {
   }
 
   .hamburg-menu.active .hamburg-menu__burger-nav:before {
-    top: 0;
+    top: 17px;
     transform: rotate(45deg);
   }
 
   .hamburg-menu.active .hamburg-menu__burger-nav:after {
-    top: 0;
+    top: 17px;
     transform: rotate(135deg);
   }
 
